<resources>
    <string name="app_name">AnimeAPI</string>
    <string name="tv_title">Title : Anime</string>
    <string name="tv_rating">Rating : 4.86</string>
    <string name="star_rating">Star Rating</string>
    <string name="tv_start_date">Start Date : 2022–07-19</string>
    <string name="tv_end_date">End Date : 2022–07-19</string>
    <string name="tv_status">Status : Completed</string>
    <string name="iv_poster">Anime Poster</string>
    <string name="iv_cover">Image Cover</string>
    <string name="fav_favorite">FAB Favorite</string>
    <string name="tv_title_title">Title :</string>
    <string name="tv_detail_title">Title</string>
    <string name="tv_detail_rating">4.86</string>
    <string name="tv_title_rating">Rating :</string>
    <string name="tv_title_rank">Rank :</string>
    <string name="tv_rank">4869</string>
    <string name="tv_title_start_date">Start Date :</string>
    <string name="tv_title_end_date">End Date :</string>
    <string name="tv_detail_start_date">2022-08-09</string>
    <string name="tv_detail_end_date">2022-08-09</string>
    <string name="tv_title_status">Status :</string>
    <string name="tv_detail_status">Completed</string>
    <string name="tv_title_synopsis">Synopsis :</string>
    <string name="tv_detail_synopsis">Synopsis</string>
    <string name="tv_title_description">Description :</string>
    <string name="tv_detail_description">Description</string>
    <string name="anime_adapter_title">Title : %1$s</string>
    <string name="anime_adapter_rating">Rating : %1$s</string>
    <string name="anime_adapter_start_date">Start Date : %1$s</string>
    <string name="anime_adapter_end_date">End Date : %1$s</string>
    <string name="anime_adapter_status">Status : %1$s</string>
    <string name="tv_something_wrong">Oppss.. there is something wrong</string>
    <string name="tv_empty_data">Empty Data</string>
    <string name="item_menu_favorite">Favorite</string>
    <string name="title_favorite">Favorite</string>
    <string name="toast_power_connected">Power Connected</string>
    <string name="toast_power_not_connected">Power Not Connected</string>
</resources>
